<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        android:layout_marginBottom="4dp"
        android:id="@+id/cardView"
        android:background="#00ffffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/patient"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerPatients"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/date"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextDate"
                    android:focusable="false"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/start_time"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextStartTime"
                    android:focusable="false"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/end_time"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextEndTIme"
                    android:focusable="false"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/note"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextNote"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonCancel"
                    android:text="@string/cancel"
                    android:background="@color/purple"
                    android:textColor="#fff"
                    android:padding="3dp"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonSubmit"
                    android:text="@string/submit"
                    android:background="@color/purple"
                    android:textColor="#fff"
                    android:padding="3dp"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>
        </LinearLayout>





    </androidx.cardview.widget.CardView>







</LinearLayout>