<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        android:layout_marginBottom="4dp"
        android:id="@+id/cardView"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/new_text"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextNewPatient"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonCancel"
                    android:text="@string/cancel"
                    android:background="@color/purple"
                    android:textColor="#fff"
                    android:padding="3dp"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonSubmit"
                    android:text="@string/submit"
                    android:background="@color/purple"
                    android:textColor="#fff"
                    android:padding="3dp"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>
        </LinearLayout>





    </androidx.cardview.widget.CardView>







</LinearLayout>